--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -29,7 +29,12 @@
     {% render 'meta-tags' %}
 
     <link rel="stylesheet" href="{{ 'all.min.css' | asset_url }}">
+    <link rel="stylesheet" href="{{ 'owl.carousel.min.css' | asset_url }}">
+    <link rel="stylesheet" href="{{ 'owl.theme.default.min.css' | asset_url }}">
+
+    <script src="{{ 'jquery.min.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'all.min.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'owl.carousel.min.js' | asset_url }}" defer="defer"></script>
 
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
